[project]
name = "anime-mux"
version = "0.1.0"
description = "Consolidate anime releases into clean MKV files"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "inquirerpy>=0.3.4",
]

[project.scripts]
anime-mux = "anime_mux.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_mux"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
